--- a/menu.html
+++ b/menu.html
@@ -10,31 +10,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@400;700&family=Quicksand:wght@100;400;500;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@400;700&family=Quicksand:wght@100;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <title>About</title>
+    <title>Menu</title>
   </head>
+
   <body id="scrollbar">
-    <div class="about-container">
+    <div class="container-menu">
       <header class="header-about">
         <a href="#" class="header-about__logo">Caffeine 101</a>
         <nav class="header__nav">
           <ul class="header__nav__list">
             <li>
-              <a class="header__nav__list--link" href="#">Instagram</a>
+              <a class="header__nav__list--link" href="#">Home</a>
             </li>
             <li>
-              <a class="header__nav__list--link" href="#">Facebook</a>
+              <a class="header__nav__list--link" href="#">Sign Up/In</a>
             </li>
             <li>
-              <a class="header__nav__list--link" href="#">Linkedin</a>
+              <a class="header__nav__list--link" href="#">Menu</a>
             </li>
             <li>
-              <a class="header__nav__list--link" href="#">Twitter</a>
+              <a class="header__nav__list--link" href="#">Contact</a>
+            </li>
+            <li>
+              <a class="header__nav__list--link" href="#">About</a>
             </li>
             <li>
               <div class="header-about__profile">
@@ -51,25 +55,7 @@
           </ul>
         </nav>
       </header>
-      <div class="about-content">
-        <div class="about-content__header">
-          <h2 class="about-content__header--heading">
-            Who am <span>I</span> ?
-          </h2>
-          <h3 class="about-content__header--subheading">
-            And what do I do ...
-          </h3>
-          <div class="about-content__text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem
-            esse libero sapiente nisi, nam consequuntur blanditiis officiis
-            magni rem, harum voluptas earum tempore quae tempora voluptate
-            consectetur sequi repellat quo?
-          </div>
-        </div>
-      </div>
-      <div class="about-do--1">Doing 1</div>
-      <div class="about-do--2">Doing 2</div>
-      <div class="about-do--3">Doing 3</div>
+      <div class="menu-content"></div>
     </div>
   </body>
 </html>
