+menu card +buttons +header +card animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Website</title>
   </head>
-  <body id="scrollbar" class="about-page">
+  <body id="scrollbar">
     <main class="container">
       <!-- Header -->
       <header class="header">
@@ -40,18 +40,7 @@
             <li>
               <a class="header__nav__list--link nav-cta" href="#">Contact</a>
             </li>
-            <li>
-              <div class="header-about__profile">
-                <div class="header-about__profile--name">Jappreet</div>
-                <div class="header-about__profile--photo">
-                  <img
-                    src="/img/jappreet-bitmoji.png"
-                    alt="Bitmoji of Jappreet Singh"
-                    class="profile"
-                  />
-                </div>
-              </div>
-            </li>
+            
           </ul>
         </nav>
       </header>
@@ -68,11 +57,10 @@
               Recipes
             </button>
             <p class="hero__content--text__para">
-              Click here for detailed informtion
+              Click the button for detailed informtion
             </p>
           </div>
           <p class="hero__note">
-            <span class="hero__note--icon"> l </span>
             Brewed over hours, not minutes. Cold Brew offers a smoother taste
             than traditional iced coffees.
           </p>
@@ -588,7 +576,6 @@
             </a>
             <span>Instagram</span>
           </li>
-
             </ul>
 
 
