--- a/about.html
+++ b/about.html
@@ -18,39 +18,33 @@
 
     <title>About</title>
   </head>
-  <body id="scrollbar">
+
+  <body id="scrollbar" class="about-page">
+    <header class="header">
+      <a href="#" class="header__logo">Caffeine 101</a>
+      <nav class="header__nav">
+        <ul class="header__nav__list">
+          <li>
+            <a class="header__nav__list--link" href="#">About</a>
+          </li>
+          <li>
+            <a class="header__nav__list--link" href="#">Menu</a>
+          </li>
+          <li>
+            <a class="header__nav__list--link" href="#">Education</a>
+          </li>
+          <li>
+            <a class="header__nav__list--link" href="#">Offers</a>
+          </li>
+          <li>
+            <a class="header__nav__list--link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <div class="about-container">
-      <header class="header-about">
-        <a href="#" class="header-about__logo">Caffeine 101</a>
-        <nav class="header__nav">
-          <ul class="header__nav__list">
-            <li>
-              <a class="header__nav__list--link" href="#">Instagram</a>
-            </li>
-            <li>
-              <a class="header__nav__list--link" href="#">Facebook</a>
-            </li>
-            <li>
-              <a class="header__nav__list--link" href="#">Linkedin</a>
-            </li>
-            <li>
-              <a class="header__nav__list--link" href="#">Twitter</a>
-            </li>
-            <li>
-              <div class="header-about__profile">
-                <div class="header-about__profile--name">Jappreet S.</div>
-                <div class="header-about__profile--photo">
-                  <img
-                    src="/img/jappreet-bitmoji.png"
-                    alt="Bitmoji of Jappreet Singh"
-                    class="profile"
-                  />
-                </div>
-              </div>
-            </li>
-          </ul>
-        </nav>
-      </header>
+      <!-- Left portion -->
       <div class="about-content">
         <div class="about-content__header">
           <h2 class="about-content__header--heading">
@@ -67,6 +61,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Right hanging cards -->
       <div class="about-do--1">Doing 1</div>
       <div class="about-do--2">Doing 2</div>
       <div class="about-do--3">Doing 3</div>
